add sqlite utils

--- a/NaviBar/app/src/main/AndroidManifest.xml
+++ b/NaviBar/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <!-- specify your API key -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value=""/>
+            android:value="AIzaSyBrtLGpCO6oHuvcoCCrtRBAqQ1jBhhYeRI"/>
 
         <!-- specify the Google Play services version number -->
         <meta-data
