--- a/NaviBar/app/src/main/AndroidManifest.xml
+++ b/NaviBar/app/src/main/AndroidManifest.xml
@@ -2,33 +2,33 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cs591.mooncake">
 
-    <!-- allow access to Internet-->
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <!-- allow access to Internet -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <!-- allow access the user's location permission-->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <!-- allow access the user's location permission -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-    <!-- allow external storage permission, if you app was built in a version higher than 8.3,
-    you don't have to include the code below-->
+    <!--
+    allow external storage permission, if you app was built in a version higher than 8.3,
+    you don't have to include the code below
+    -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-        android:largeHeap="true"
-
-        >
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
         <!-- specify your API key -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBrtLGpCO6oHuvcoCCrtRBAqQ1jBhhYeRI"/>
+            android:value="AIzaSyBrtLGpCO6oHuvcoCCrtRBAqQ1jBhhYeRI" />
 
         <!-- specify the Google Play services version number -->
         <meta-data
@@ -38,22 +38,40 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
+
+        </activity>
+        <activity android:name=".explore.EventActivity" />
+        <activity android:name=".profile.AboutPage" />
+        <activity android:name=".profile.WebsitePage" />
+        <activity android:name=".profile.InvitePage" />
+        <activity android:name=".profile.FeedbackPage" />
+        <activity android:name=".profile.TicketPage" />
+        <activity android:name=".map.ShowInfo" />
+        <activity android:name=".login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".explore.EventActivity"></activity>
-        <activity android:name=".profile.AboutPage"></activity>
-        <activity android:name=".profile.WebsitePage"></activity>
-        <activity android:name=".profile.InvitePage"></activity>
-        <activity android:name=".profile.FeedbackPage"></activity>
-        <activity android:name=".profile.TicketPage"></activity>
-        <activity android:name=".map.ShowInfo"></activity>
 
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"/>
 
-
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
+        <activity
+            android:name="com.facebook.CustomTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="@string/fb_login_protocol_scheme" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
