Map zoom feature update

--- a/NaviBar/build.gradle
+++ b/NaviBar/build.gradle
@@ -20,6 +20,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        //zoom feature for map
+        maven { url "https://jitpack.io" }
     }
 }
 
