--- a/NaviBar/app/src/main/AndroidManifest.xml
+++ b/NaviBar/app/src/main/AndroidManifest.xml
@@ -36,6 +36,11 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:theme="@android:style/Theme.Translucent" />
+
+        <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
 
