--- a/NaviBar/app/src/main/AndroidManifest.xml
+++ b/NaviBar/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/AppTheme.Launcher">
 
         <!-- specify your API key -->
         <meta-data
